--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,25 @@ body {
 }
 
 canvas {
+    width: 100%;
+    height: 100%;
+}
+
+.renderer {
+    position: relative;
     border-radius: 2rem;
+    overflow: hidden;
+    box-shadow: 0px 32px 48px 16px rgba(0, 0, 0, 0.1);
     width: 90vw;
     height: 90vh;
-    box-shadow: 0px 32px 48px 16px rgba(0, 0, 0, 0.1);
+}
+
+.fps {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: white;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 8px 16px;
+    font-family: "JetBrains Mono";
 }
